[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phasor"
version = "0.1.0"
authors =[{ name="Matthew Caudill", email="mscaudill@gmail.com" }]
description = "Cross-Frequency Coupling Algorithms in Python"
readme = "README.md"
requires-python = ">=3.10"

keywords = [
    "EEG",
    "Cross-frequency coupling",
    "Phase-Amplitude coupling",
    "Amplitude-Amplitude coupling",
    "Comodulation",
    "hilbert",
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ipython",
    "notebook",
    "openseize",
    "scikit-image",
    "pillow",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "isort",
    "mypy",
    "pylint",
    "bumpver",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
    "pip-tools",
    "build",
    "twine"
]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/mscaudill/phasor"

# bumpver configuration
[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/phasor/__init__.py" = ['__version__ = "{version}"']

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# 3rd party's without annotations
module = ["scipy.*", "matplotlib.*", "openseize.*"]
ignore_missing_imports = true

[tool.setuptools.package-data]
phasor = ["py.typed"]

# pylint configuration
[tool.pylint.design]
max-attributes = 10
max-args = 10

[tool.pylint.basic]
argument-naming-style = "any"
variable-naming-style = "any"
attr-naming-style = "any"

[tool.isort]
profile = 'google'
line_length = 80

[tool.black]
line-length = 80
skip-string-normalization = 1
